--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>The Internet Yesterday</title>
 	<meta charset="utf8">
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,900' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, inital-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -36,7 +36,7 @@
 
 	  ga('create', 'UA-52803602-1', 'auto');
 	  ga('send', 'pageview');
-</script>
+	</script>
 
 
 </head>
@@ -46,6 +46,7 @@
 <header>
 
 	<div class="title">The <span>Internet</span> Yesterday</div>
+	<div class="sub-title">Yesterday's Most Popular Content</div>
 
 </header>
 
